k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foodstore-ingress
  namespace: foodstore
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /()
        pathType: Prefix
        backend:
          service:
            name: frontend-user
            port:
              number: 3000
      - path: /admin(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend-admin
            port:
              number: 3001
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
      - path: /phpmyadmin(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin
            port:
              number: 80
